<resources>

    <string name="app_name">MySamStudy</string>

    <!--    Navigation Drawer   -->
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <!--    general    -->
    <string name="charSet">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="back_btn">Go back</string>

    <!--    Account    -->
    <string name="account_settings">Account Settings</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="privacy_settings_mssg">Allow your profile to be searched and viewed by others</string>
    <string name="personal_information">Personal Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="edit_password">Edit Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="save_changes">Save Changes</string>

    <!--    Favorites   -->
    <string name="favorites">Favorites</string>
    <string name="refresh">refresh</string>

    <!--    Login   -->
    <string name="login">Login</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="register">Register</string>

    <!--    Main    -->
    <string name="get_started_msg">Click the \'+\' icon in the top right corner to get started</string>
    <string name="log_out">Log out</string>

    <!--    Register    -->
    <string name="create_an_account">Create an Account</string>
    <string name="first_name_elp">First Name…</string>
    <string name="last_name_elp">Last Name…</string>
    <string name="email_elp">Email…</string>
    <string name="username_elp">Username…</string>
    <string name="password_elp">Password…</string>
    <string name="submit">Submit</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>

    <!--    Search    -->
    <string name="search_elp">Search…</string>
    <string name="search_button">Search button</string>
    <string name="search_warning">We couldn\'t find a match for your search</string>

    <!--    Set Activity    -->
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_new">Add new</string>
    <string name="question_elp">Question…</string>
    <string name="answer_elp">Answer…</string>
    <string name="get_started_2">Click the \'+\' icon to add cards to your set.</string>
    <string name="collapse_expand">Collapse/Expand</string>
    <string name="next_question">Next Question</string>

    <!--    Settings    -->
    <string name="settings">Settings</string>
    <string name="share_sets_msg">Allow others to view your study sets</string>
    <string name="share_sets_message_2">Allow your study sets to be searchable and viewed by other users. You can share all of your sets or you can select the sets you want to share.</string>
    <string name="don_t_allow_sharing">Don\'t Allow Sharing</string>
    <string name="share_all">Share All</string>
    <string name="only_share_selected">Only Share Selected</string>
    <string name="no_set_msg">No sets to share</string>
    <string name="enable_dark_theme">Enable Dark Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="study_preferences">Study Preferences</string>
    <string name="always_loop_sets">Always loop sets</string>
    <string name="always_show_answers">Always show answers</string>

    <!--    Dialogues   -->
    <string name="confirm_delete_account">Are you sure you want to delete your account?</string>
    <string name="lost_data_msg">All of your data will be lost upon confirmation</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="verify_your_password">Verify your password</string>
    <string name="verify">Verify</string>
    <string name="quit_header_msg">Are you sure you want to quit?</string>
    <string name="quit">Quit</string>
    <string name="_continue">Continue</string>
    <string name="confirm_remove_cards_header_msg">Are you sure you want to remove these cards?</string>
    <string name="confirm_remove_sets_header_msg">Are you sure you want to remove these sets?</string>
    <string name="delete_item_header_msg">Are you sure you want to delete this item?</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="show_answer">Show Answer</string>

    <!--    fragments   -->
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="finish">Finish</string>
    <string name="set_name_elp">Set name…</string>
    <string name="favorite">Favorite</string>
    <string name="no_cards_msg">This set has no cards</string>

    <!-- Snippets/Menus   -->
    <string name="edit_card">Edit Card</string>
    <string name="start">Start</string>
    <string name="search">Search</string>
    <string name="groups">Groups</string>
    <string name="account">Account</string>
    <string name="loop_set">Loop Set</string>
    <string name="show_answers">Show Answers</string>

</resources>
