<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/toolBar">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/edit_card_back"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back_btn" />

        <TextView
            android:id="@+id/edit_card_toolbar_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_card"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/edit_card_finish"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_finish"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/finish" />

        <ImageView
            android:id="@+id/edit_card_delete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/delete" />

    </LinearLayout>

</android.support.v7.widget.Toolbar>