<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backGround">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/create_an_account"
        android:textAlignment="center"
        android:textColor="@color/lightOrange"
        android:textSize="26sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_submit"
        android:layout_below="@id/title_text"
        android:layout_marginBottom="0dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/register_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:layout_marginStart="30dp"
            android:textColorHint="?attr/primaryText"
            android:backgroundTint="@color/lightOrange"
            android:layout_marginEnd="30dp"
            android:maxLines="1"
            android:hint="@string/first_name_elp"
            android:inputType="textCapWords"
            android:textColor="?attr/primaryText"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/register_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColorHint="?attr/primaryText"
            android:backgroundTint="@color/lightOrange"
            android:maxLines="1"
            android:hint="@string/last_name_elp"
            android:inputType="textCapWords"
            android:textColor="?attr/primaryText"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColorHint="?attr/primaryText"
            android:backgroundTint="@color/lightOrange"
            android:maxLines="1"
            android:hint="@string/email_elp"
            android:inputType="textEmailAddress"
            android:textColor="?attr/primaryText"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColorHint="?attr/primaryText"
            android:backgroundTint="@color/lightOrange"
            android:maxLines="1"
            android:hint="@string/username_elp"
            android:inputType="text"
            android:textColor="?attr/primaryText"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:digits="@string/charSet"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColorHint="?attr/primaryText"
            android:backgroundTint="@color/lightOrange"
            android:maxLines="1"
            android:hint="@string/password_elp"
            android:inputType="textVisiblePassword"
            android:textColor="?attr/primaryText"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center" />

    </LinearLayout>

    <Button
        android:id="@+id/register_submit"
        android:layout_width="110dp"
        android:layout_height="42dp"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/register_login"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_accessory_blue"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/register_login"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="?attr/backGround"
        android:text="@string/already_have_an_account_login"
        android:textAllCaps="false"
        android:textColor="@color/lightOrange"
        android:textSize="16sp" />

</RelativeLayout>